tests/errors/surf_exc_06.experr
type 'None' is not iterable
